testsuite/poke.pkl/struct-types-endian-diag-2.pk
/* { dg-do compile } */

deftype Packet = struct
 {
   little string foo; /* { dg-error "" } */
   long bar;
 };
